--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.5.2",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
+    "react-calendar": "^2.19.2",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "sass": "^1.23.3"
