--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "moodjournal",
+  "name": "hues_and_lows",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.5.2",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/system": "^4.5.2",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.27",
-    "moments": "0.0.2",
-    "node-sass": "^4.13.0",
+    "@material-ui/core": "^4.6.0",
+    "@types/jest": "24.0.21",
+    "@types/node": "12.12.5",
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.3",
+    "@types/react-router-dom": "^5.1.2",
     "react": "^16.11.0",
-    "react-calendar": "^2.19.2",
     "react-dom": "^16.11.0",
-    "react-moment": "^0.9.6",
-    "react-router": "^2.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.2.0",
-    "sass": "^1.23.3"
+    "react-scripts": "3.2.0",
+    "react-spring": "^8.0.27",
+    "typescript": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
