--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "@types/react-router-dom": "^5.1.2",
+    "eslint-plugin-react-hooks": "^2.2.0",
     "react": "^16.11.0",
+    "react-calendar": "^2.19.2",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
